--- a/index.html
+++ b/index.html
@@ -1,7 +1,107 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages!.</p>
-</body>
+
+  <head>
+    <link href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet">
+    <link rel="stylesheet" href="bootstrap.css">
+	<link rel="stylesheet" href="marl.css">
+  
+  
+   
+  </head>
+
+  <body>
+    <div class="nav">
+      <div class="container">
+        <ul class="pull-left">
+          <li><a href="#">About me</a></li>
+          <li><a href="#">CV</a></li>
+        </ul>
+        <ul class="pull-right">
+          <li><a href="#">Skills</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="jumbotron">
+      <div class="container">
+        <h1>Best girl to work with</h1>
+        <p>let us talk about our visons</p>
+        <!--<a href="#">meet me</a>-->
+      </div>
+    </div>
+   
+    <div class="skills">
+        <div class="container">
+            <div class="quote">
+				<br>
+				<br>
+				<p>They say that there are two kinds of people: 
+				<p>those who know EVERYTHING ABOUT SOMETHING... and those who know SOMETHING ABOUT EVERYTHING</p>
+				<p>I belong to the second group:</p>
+				<p>dividing my energy and passion into wide spectrum of interests and activities.</p>
+				<br>
+				<br>
+				<h2>MY INTERESTS</h2>
+				<br>
+			</div>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="thumbnail">
+                        <img src="text72.png"/>
+                    </div>
+                    <div class="thumbnail">
+                        <img src="graphics72.png"/>
+                    </div>
+                </div>
+               
+                <div class="col-md-4">
+                     <div class="thumbnail">
+                        <img src="media72.png"/>
+                    </div>
+                    <div class="thumbnail">
+                        <img src="geeky72.png"/>
+                    </div>
+                </div>
+               
+                <div class="col-md-4">
+                     <div class="thumbnail">
+                        <img src="inter.png"/>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="learn-more">
+       <div class="container">
+          <div class="row">
+           <div class="col-md-4">
+               <h3>Dlaczego ja?</h3>
+               <p>trochê wiem o wielu rzeczach</p>
+			   <p>szybko siê uczê i lubiê to robiæ</p>
+			   <p>nie ma dla mnie rzeczy niemo¿liwych</p>
+			   <p>chyba ¿e to rzeczy nimo¿liwie niefajne</P>
+			   <p></p>
+               <p><a href="#">Wiêcej szczegó³ów w moim CV</a></p>
+           </div>
+            <div class="col-md-4">
+               <h3>A poza tym...</h3>
+               <p>Badania wykaza³y, ¿e pracodawcy którzy nie odpowiedzieli na moj¹ aplikacjê, maj¹ mniejsze szanse na przetrwanie apokalipsy zombie.</p>
+               <!--<p><a href="#">try me</a></p>-->
+            </div>
+            <div class="col-md-4">
+               <h3>Kontakt</h3>
+               <p>mo¿na do mnie dzwoniæ o ka¿dej porze:</p>
+			   <p>+48 505967536</p>
+			   <p>lub wys³aæ maila tu: </p>
+			   <p>marlenape@gmail.com</p>
+               <!--<p><a href="#">details :)</a></p>-->
+            </div>
+         </div>
+       </div>
+     </div>
+  </body>
 </html>
