--- a/index.html
+++ b/index.html
@@ -2,12 +2,10 @@
 <html>
 
   <head>
-    <link href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet">
-    <link rel="stylesheet" href="bootstrap.css">
+	<link href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet">
+	<link rel="stylesheet" href="bootstrap.css">
 	<link rel="stylesheet" href="marl.css">
-  
-  
-   
+
   </head>
 
   <body>
@@ -80,23 +78,23 @@
           <div class="row">
            <div class="col-md-4">
                <h3>Dlaczego ja?</h3>
-               <p>trochê wiem o wielu rzeczach</p>
-			   <p>szybko siê uczê i lubiê to robiæ</p>
-			   <p>nie ma dla mnie rzeczy niemo¿liwych</p>
-			   <p>chyba ¿e to rzeczy nimo¿liwie niefajne</P>
+               <p>trochÃª wiem o wielu rzeczach</p>
+			   <p>szybko siÃª uczÃª i lubiÃª to robiÃ¦</p>
+			   <p>nie ma dla mnie rzeczy niemoÂ¿liwych</p>
+			   <p>chyba Â¿e to rzeczy nimoÂ¿liwie niefajne</P>
 			   <p></p>
-               <p><a href="#">Wiêcej szczegó³ów w moim CV</a></p>
+               <p><a href="#">WiÃªcej szczegÃ³Â³Ã³w w moim CV</a></p>
            </div>
             <div class="col-md-4">
                <h3>A poza tym...</h3>
-               <p>Badania wykaza³y, ¿e pracodawcy którzy nie odpowiedzieli na moj¹ aplikacjê, maj¹ mniejsze szanse na przetrwanie apokalipsy zombie.</p>
+               <p>Badania wykazaÂ³y, Â¿e pracodawcy ktÃ³rzy nie odpowiedzieli na mojÂ¹ aplikacjÃª, majÂ¹ mniejsze szanse na przetrwanie apokalipsy zombie.</p>
                <!--<p><a href="#">try me</a></p>-->
             </div>
             <div class="col-md-4">
                <h3>Kontakt</h3>
-               <p>mo¿na do mnie dzwoniæ o ka¿dej porze:</p>
+               <p>moÂ¿na do mnie dzwoniÃ¦ o kaÂ¿dej porze:</p>
 			   <p>+48 505967536</p>
-			   <p>lub wys³aæ maila tu: </p>
+			   <p>lub wysÂ³aÃ¦ maila tu: </p>
 			   <p>marlenape@gmail.com</p>
                <!--<p><a href="#">details :)</a></p>-->
             </div>
