--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
   <head>
+  	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet">
 	<link rel="stylesheet" href="bootstrap.css">
 	<link rel="stylesheet" href="marl.css">
@@ -16,7 +17,7 @@
           <li><a href="#">CV</a></li>
         </ul>
         <ul class="pull-right">
-          <li><a href="#">Skills</a></li>
+          <li><a href="#about-me">Skills</a></li>
           <li><a href="#">Portfolio</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
@@ -73,7 +74,7 @@
         </div>
     </div>
 
-    <div class="learn-more">
+    <div id="about-me" class="learn-more">
        <div class="container">
           <div class="row">
            <div class="col-md-4">
