--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <link href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet">
     <link rel="stylesheet" href="bootstrap.css">
 	<link rel="stylesheet" href="marl.css">
-  
-  
    
   </head>
 
@@ -14,7 +12,7 @@
     <div class="nav">
       <div class="container">
         <ul class="pull-left">
-          <li><a href="#">About me</a></li>
+          <li><a href="#about-me">About me</a></li>
           <li><a href="#">CV</a></li>
         </ul>
         <ul class="pull-right">
@@ -50,32 +48,32 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="thumbnail">
-                        <img src="text72.png"/>
+                        <img src="images/text72.png"/>
                     </div>
                     <div class="thumbnail">
-                        <img src="graphics72.png"/>
+                        <img src="images/graphics72.png"/>
                     </div>
                 </div>
                
                 <div class="col-md-4">
                      <div class="thumbnail">
-                        <img src="media72.png"/>
+                        <img src="images/media72.png"/>
                     </div>
                     <div class="thumbnail">
-                        <img src="geeky72.png"/>
+                        <img src="images/geeky72.png"/>
                     </div>
                 </div>
                
                 <div class="col-md-4">
                      <div class="thumbnail">
-                        <img src="inter.png"/>
+                        <img src="images/inter.png"/>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="learn-more">
+    <div id="about-me" class="learn-more">
        <div class="container">
           <div class="row">
            <div class="col-md-4">
