--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <li><a href="#">CV</a></li>
         </ul>
         <ul class="pull-right">
-          <li><a href="#">Skills</a></li>
+          <li><a href="#skills">Skills</a></li>
           <li><a href="#">Portfolio</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
@@ -31,7 +31,7 @@
       </div>
     </div>
    
-    <div class="skills">
+    <div id="skills" class="skills">
         <div class="container">
             <div class="quote">
 				<br>
