--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
   <body>
     <div class="nav">
       <div class="container">
-        <ul class="pull-left">
+        
+		<ul class="pull-right">
           <li><a href="#about-me">About me</a></li>
-          <li><a href="#">CV</a></li>
-        </ul>
-        <ul class="pull-right">
-          <li><a href="#skills">Skills</a></li>
-          <li><a href="#">Portfolio</a></li>
           <li><a href="#">Contact</a></li>
+        </ul>
+        <ul class="pull-left">
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#">Experience</a></li>
+          <li><a href="#">Education</a></li>
         </ul>
       </div>
     </div>
