--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <div class="quote">
 				<br>
 				<br>
+				<h2>Hello SOCIAL FRAME !</h2>
 				<p>They say that there are two kinds of people: 
 				<p>those who know EVERYTHING ABOUT SOMETHING... and those who know SOMETHING ABOUT EVERYTHING</p>
 				<p>I belong to the second group:</p>
