--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         
 		<ul class="pull-right">
           <li><a href="#about-me">About me</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
         <ul class="pull-left">
           <li><a href="#skills">Skills</a></li>
@@ -91,7 +91,7 @@
                <p>Badania wykazały, że pracodawcy którzy nie odpowiedzieli na moją aplikację, mają mniejsze szanse na przetrwanie apokalipsy zombie.</p>
                <!--<p><a href="#">try me</a></p>-->
             </div>
-            <div class="col-md-4">
+            <div id="contact" class="col-md-4">
                <h3>Kontakt</h3>
                <p>można do mnie dzwonić o każdej porze:</p>
 			   <p>+48 505967536</p>
