Revert "dodałam skillsy"
This reverts commit f5ddcc0b003f17c3d9a2dc8a4f1a35dcdb8cc177.

--- a/index/index.html
+++ b/index/index.html
@@ -17,8 +17,8 @@
           <li><a href="#contact">Contact</a></li>
         </ul>
         <ul class="pull-left">
-          <li><a href="skillsindex.html">Skills</a></li>
-          <li><a href="#">Experience</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="skills.html">Experience</a></li>
           <li><a href="#">Education</a></li>
         </ul>
       </div>
