poprawiłam jumbotron (600px zamiast 500) i tło

--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
 
   <head>
-    <link href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet">
-    <link rel="stylesheet" href="bootstrap.css">
-	<link rel="stylesheet" href="marl.css">
-   
+  
+    <link href="bootstrap.css" rel="stylesheet"  >
+	<link href="marl.css" rel="stylesheet" >
+	<link href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet">
+  
   </head>
 
   <body>
@@ -17,18 +18,20 @@
           <li><a href="#contact">Contact</a></li>
         </ul>
         <ul class="pull-left">
-          <li><a href="#skills">Skills</a></li>
-          <li><a href="skills.html">Experience</a></li>
+          <li><a href="skillsindex.html">Skills</a></li>
+          <li><a href="#">Experience</a></li>
           <li><a href="#">Education</a></li>
         </ul>
       </div>
     </div>
+	
 
-    <div class="jumbotron">
+	
+   <div class="jumbotron">
       <div class="container">
         <h1>Best girl to work with</h1>
         <p>let us talk about our visons</p>
-        <!--<a href="#">meet me</a>-->
+     
       </div>
     </div>
    
