--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <li><a href="#contact">Contact</a></li>
         </ul>
         <ul class="pull-left">
-          <li><a href="skillsindex.html">Skills</a></li>
+          <li><a href="skills.html">Skills</a></li>
           <li><a href="#">Experience</a></li>
           <li><a href="#">Education</a></li>
         </ul>
@@ -105,5 +105,7 @@
          </div>
        </div>
      </div>
+	 
+	 
   </body>
 </html>
