Podlinkowałam strony w budowie :)

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
       <div class="container">
         
 		<ul class="pull-right">
-          <li><a href="#about-me">About me</a></li>
+          <li><a href="#interests">About me</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
         <ul class="pull-left">
           <li><a href="skills.html">Skills</a></li>
-          <li><a href="#">Experience</a></li>
-          <li><a href="#">Education</a></li>
+          <li><a href="experience.html">Experience</a></li>
+          <li><a href="edu.html">Education</a></li>
         </ul>
       </div>
     </div>
@@ -46,7 +46,7 @@
 				<p>dividing my energy and passion into wide spectrum of interests and activities.</p>
 				<br>
 				<br>
-				<h2>MY INTERESTS</h2>
+				<h2 id="interests">MY INTERESTS</h2>
 				<br>
 			</div>
             <div class="row">
