--- a/experience.html
+++ b/experience.html
@@ -3,8 +3,12 @@
 
   <head>
   
-    <link href="bootstrap.css" rel="stylesheet"  >
-	<link href="marl.css" rel="stylesheet" >
+ 
+    <!-- Bootstrap Core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom CSS -->
+    <link href="css/skills.min.css" rel="stylesheet">
 	<link href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet">
   
   </head>
@@ -15,6 +19,17 @@
    <p> Informacje o doświadczeniu znajdują się w CV :)</p>
    </div>
 	 
+                <!-- Pager -->
+                <ul class="pager">
+                    <li class="next">
+                        <a href="index.html">POWRÓT TO STRONY GŁÓWNEJ &rarr;</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <hr>
 	 
   </body>
 </html>
