Kosmetyka dołu strony

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="bootstrap.css" rel="stylesheet"  >
 	<link href="marl.css" rel="stylesheet" >
 	<link href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet">
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
   
   </head>
 
@@ -29,8 +30,8 @@
 	
    <div class="jumbotron">
       <div class="container">
-        <h1>Best girl to work with</h1>
-        <p>let us talk about our visons</p>
+        <h1>Hello, SOCIAL FRAME !</h1>
+        <p>let's get to know each other</p>
      
       </div>
     </div>
@@ -39,7 +40,7 @@
         <div class="container">
             <div class="quote">
 				<br>
-				<h2>Hello SOCIAL FRAME !</h2>
+				<h2>Let me introduce myself...</h2>
 				<p>They say that there are two kinds of people: 
 				<p>those who know EVERYTHING ABOUT SOMETHING... and those who know SOMETHING ABOUT EVERYTHING</p>
 				<p>I belong to the second group:</p>
@@ -82,12 +83,13 @@
           <div class="row">
            <div class="col-md-4">
                <h3>Dlaczego ja?</h3>
-               <p>trochę wiem o wielu rzeczach</p>
-			   <p>szybko się uczę i lubię to robić</p>
-			   <p>nie ma dla mnie rzeczy niemożliwych</p>
-			   <p>chyba że to rzeczy nimożliwie niefajne</P>
+               <p>Trochę wiem o wielu rzeczach</p>
+			   <p>a co równie ważne:wiem czego nie wiem i czego bym się chciała dowiedzieć ;)<p>
+			   <p>Szybko się uczę i lubię to robić.</p>
+			   <p>Nie ma dla mnie rzeczy niemożliwych...</p>
+			   <p>...chyba że to rzeczy nimożliwie niefajne</P>
 			   <p></p>
-               <p><a href="#">Więcej szczegółów w moim CV</a></p>
+               <p><a href="skills.html" style="text-decoration:underline">Więcej szczegółów TUTAJ</a></p>
            </div>
             <div class="col-md-4">
                <h3>A poza tym...</h3>
@@ -97,9 +99,9 @@
             <div id="contact" class="col-md-4">
                <h3>Kontakt</h3>
                <p>można do mnie dzwonić o każdej porze:</p>
-			   <p>+48 505967536</p>
+			   <p><b>+48 505967536</b></p>
 			   <p>lub wysłać maila tu: </p>
-			   <p>marlenape@gmail.com</p>
+			   <p><b>marlenape@gmail.com</b></p>
                <!--<p><a href="#">details :)</a></p>-->
             </div>
          </div>
