--- a/index.html
+++ b/index.html
@@ -113,25 +113,25 @@ SOME ELEMENTS FROM THEMES:
             <div class="row">
                 <div class="col-md-4">
                     <div class="thumbnail">
-                         <a href="skills.html"><img src="images/graphics72.png"/></a>
+                        <img src="images/graphics72.png"/>
                     </div>
                     <div class="thumbnail">
-                         <a href="skills.html"><img src="images/text72.png"/></a>
+                        <img src="images/text72.png"/>
                     </div>
                 </div>
                
                 <div class="col-md-4">
                      <div class="thumbnail">
-                         <a href="skills.html"><img src="images/geeky72.png"/></a>
+                        <img src="images/geeky72.png"/>
                     </div>
                     <div class="thumbnail">
-                         <a href="skills.html"><img src="images/media72.png"/></a>
+                        <img src="images/media72.png"/>
                     </div>
                 </div>
                
                 <div class="col-md-4">
                      <div class="thumbnail">
-                        <a href="skills.html"><img src="images/inter.png"/></a>
+                        <img src="images/inter.png"/>
                     </div>
                 </div>
             </div>
