--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ SOME ELEMENTS FROM THEMES:
 		   
             <div class="col-md-4">
                <h3>A poza tym...</h3>
-               <p>Badania wykazały, że pracodawcy którzy nie odpowiedzieli na moją aplikację, mają mniejsze szanse na przetrwanie apokalipsy zombie.</p>
+               <p>Badania wykazały, że pracodawcy którzy nie odpowiedzieli na moją aplikację, mają mniejsze szanse na przetrwanie apokalipsy zombie ;)</p>
             
             </div>
 			
