--- a/skills.html
+++ b/skills.html
@@ -60,7 +60,7 @@
 
     <!-- TEKST NA OBRAZKU-->
   
-    <header id="top" class="intro-header" style="background-image: url('images/kubek.png')">
+    <header id="top" class="intro-header" style="background-image: url('images/kubek1900.png')">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
