podmianka z png na jpg

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ SOME ELEMENTS FROM THEMES:
 
     <!-- TEKST NA OBRAZKU-->
   
-    <header id="top" class="intro-header" style="background-image: url('images/marl500.png')">
+    <header id="top" class="intro-header" style="background-image: url('images/marl500.jpg')">
         <div class="container">
             <div class="row">
                 <div class="col-md-10">
