--- a/skills.html
+++ b/skills.html
@@ -60,7 +60,7 @@
 
     <!-- TEKST NA OBRAZKU-->
   
-    <header id="top" class="intro-header" style="background-image: url('images/kubek1900.png')">
+    <header id="top" class="intro-header" style="background-image: url('images/kubek1900.jpg')">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -158,7 +158,7 @@
 				<!---------------------------------------------------------------------HARD SKILLS END--------------------------------------------------------------------->
 				
 				<!---------------------------------------------------------------------SEKCJA JĘZYKOWA--------------------------------------------------------------------->
-				<div class="lang" style="background-image: url('images/lang1900.png')" >
+				<div class="lang" style="background-image: url('images/lang1900.jpg')" >
 					<div class="container">
 						<div class="row">
 							
