--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ SOME ELEMENTS FROM THEMES:
                     <div class="thumbnail">
                          <a href="skills.html"><img src="images/graphics72.png"/></a>
                     </div>
-                    <div class="thumbnail">
+                    <div class="thumbnail" "textth">
                          <a href="skills.html"><img src="images/text72.png"/></a>
                     </div>
                 </div>
@@ -124,6 +124,7 @@ SOME ELEMENTS FROM THEMES:
                      <div class="thumbnail">
                          <a href="skills.html"><img src="images/geeky72.png"/></a>
                     </div>
+					
                     <div class="thumbnail">
                          <a href="skills.html"><img src="images/media72.png"/></a>
                     </div>
