--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ SOME ELEMENTS FROM THEMES:
                     <div class="site-heading">
                         <h1>Hello, Social Frame!</h1>
                         <hr class="small">
-                        <span class="subheading">Let's get to know each other :)</span>
+                        <span class="subheading">Let's get to know each other</span>
                     </div>
                 </div>
             </div>
