hamburger i zwebowane foty

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ SOME ELEMENTS FROM THEMES:
 
     <!-- TEKST NA OBRAZKU-->
   
-    <header id="top" class="intro-header" style="background-image: url('images/marl500.jpg')">
+    <header id="top" class="intro-header" style="background-image: url('images/marlweb.jpg')">
         <div class="container">
             <div class="row">
                 <div class="col-md-10">
@@ -188,7 +188,14 @@ SOME ELEMENTS FROM THEMES:
 
     <hr>
 
-  
+   <!-- jQuery -->
+    <script src="js/jquery.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="js/bootstrap.min.js"></script>
+
+    <!-- Custom Theme JavaScript -->
+    <script src="js/clean-blog.min.js"></script>
 
  
 
