zakomentowałam na razie nieaktywne zakładki z menu :)

--- a/education.html
+++ b/education.html
@@ -58,7 +58,7 @@
 					    <!-- -------------------------------------liceum----------------------------------------- -->
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="images/geeky72.png" alt="">
+                                <img class="img-circle img-responsive" src="images/elo.jpg" alt="">
                             </div>
                             
 							<div class="timeline-panel">
@@ -112,7 +112,7 @@
 						<!-- -------------------------------------mgr----------------------------------------- -->
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
+                                <img class="img-circle img-responsive" src="images/master.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
