--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@ SOME ELEMENTS FROM THEMES:
                 </ul>
 				<ul class="nav navbar-nav navbar-left">
                      <li><a href="skills.html">Umiejętności</a></li>
-					 <li><a href="experience.html">Doświadczenie</a></li>
-					 <li><a href="edu.html">Edukacja</a></li>
+					<!--  <li><a href="experience.html">Doświadczenie</a></li> -->
+					<!--  <li><a href="edu.html">Edukacja</a></li> -->
                     
                 </ul>
             </div>
