--- a/eng.html
+++ b/eng.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-  
+    <link rel="Shortcut icon" href="images/headiko.ico" />
  
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
