--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@ SOME ELEMENTS FROM THEMES:
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Marl Marl</title>
+    <title>Marl</title>
+	<link rel="Shortcut icon" href="images/headiko.ico" />
 
     <!-- Bootstrap Core CSS -->
     
