--- a/skills.html
+++ b/skills.html
@@ -12,6 +12,8 @@
     <meta name="author" content="">
 
     <title>Skills</title>
+	
+	<link rel="Shortcut icon" href="images/headiko.ico" />
 
     <!-- Bootstrap Core CSS -->
     
@@ -21,7 +23,7 @@
     <link href="css/skills.min.css" rel="stylesheet">
 
     <!-- FONTY -->
-    <link href="fonts/Comfortaa_Regular.ttf" rel="stylesheet" type="text/css">
+    
     <link href='http://fonts.googleapis.com/css?family=Lora:400,400italic,700,700italic&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	
