--- a/education.html
+++ b/education.html
@@ -25,7 +25,7 @@
     <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
-	 <link href='http://fonts.googleapis.com/css?family=Lora:400,400italic,700,700italic&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Lora:400,400italic,700,700italic&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	
 
@@ -72,7 +72,7 @@
                     <div class="site-heading">
                         <h1>Edukacja</h1>
                         <hr class="small">
-                        <span class="subheading">i co z niej wynikało (lub nie;p)</span>
+                        <span class="subheading">i co z niej wynikało (lub nie</span>
                     </div>
                 </div>
             </div>
@@ -84,15 +84,16 @@
     <!---------------------------- GŁÓWNA SEKCJA ------------------------------>
     <section id="about">
         <div class="container">
-		
-            <div class="row">
+			
+			<!-- ------------------------nagłówek---------------------- (section heading/subheadig text-muted)-->
+            <!-- div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">EDUKACJA</h2>
                     <h3 class="section-subheading text-muted">I wszystko co z niej wynika...</h3>
                 </div>
-            </div>
+            </div> -->
 			
-			<!-- --------------kółeczka-------------- --><!-- image panel (heading subheading) body -->
+			<!-- --------------kółeczka-------------- --><!-- -->
 			
             <div class="row">
                 <div class="col-lg-12">
