footerko i pager dla edu

--- a/education.html
+++ b/education.html
@@ -221,6 +221,21 @@
             </div>
         </div>
     </section>
+	
+<!-- 	---------------footerko---------------- -->
+	<div class="footer">
+		<div class="container">
+						<!--<p>footer</p>-->
+		</div>
+					
+					
+					<!-- Pager -->
+					<ul class="pager">
+						<li class="next">
+							<a href="index.html">POWRÓT TO STRONY GŁÓWNEJ &rarr;</a>
+						</li>
+					</ul>
+	</div>
 
 	
 	 <!-- jQuery -->
