poprawiłam footerko i pagerka

--- a/education.html
+++ b/education.html
@@ -216,6 +216,7 @@
                                 </div>
                             </div>
                         </li>
+
                     </ul>
                 </div>
             </div>
@@ -232,9 +233,15 @@
 					<!-- Pager -->
 					<ul class="pager">
 						<li class="next">
+							<a href="#top">DO GÓRY &rarr;</a>
+						</li>
+					</ul>
+					<ul class="pager">
+						<li class="next">
 							<a href="index.html">POWRÓT TO STRONY GŁÓWNEJ &rarr;</a>
 						</li>
 					</ul>
+					
 	</div>
 
 	
