--- a/skills.html
+++ b/skills.html
@@ -285,9 +285,15 @@
 					<!-- Pager -->
 					<ul class="pager">
 						<li class="next">
+							<a href="#top">DO GÓRY &rarr;</a>
+						</li>
+					</ul>
+					<ul class="pager">
+						<li class="next">
 							<a href="index.html">POWRÓT TO STRONY GŁÓWNEJ &rarr;</a>
 						</li>
 					</ul>
+					
 				</div>
 				
  <!-- jQuery -->
