--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 	<!-- Custom JavaScript -->
     <script src="js/clean-blog.min.js"></script>
 	
-	<!-- Start of StatCounter Code for Default Guide -->
+<!-- Start of StatCounter Code for Default Guide -->
 <script type="text/javascript">
 var sc_project=10496396; 
 var sc_invisible=1; 
@@ -210,10 +210,10 @@ scJsHost+
 "statcounter.com/counter/counter.js'></"+"script>");
 </script>
 <noscript><div class="statcounter"><a title="shopify
-analytics" href="http://statcounter.com/shopify/"
+analytics ecommerce" href="http://statcounter.com/shopify/"
 target="_blank"><img class="statcounter"
 src="http://c.statcounter.com/10496396/0/83340be0/1/"
-alt="shopify analytics"></a></div></noscript>
+alt="shopify analytics ecommerce"></a></div></noscript>
 <!-- End of StatCounter Code for Default Guide -->
 
 <!-- -------google anal------- -->
