--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 	
 	<link href='http://fonts.googleapis.com/css?family=Lora:400,400italic,700,700italic&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Raleway:400,100,200,300,500,600,700,800,900' rel='stylesheet' type='text/css'>
 	
 
  
@@ -194,6 +195,7 @@
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
+	<script src="js/jquery.easing.1.3"></script>
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
@@ -212,7 +214,7 @@
         type : 'radial',
         revolve : 'center',
         minSpeed : 100,
-        maxSpeed : 500,
+        maxSpeed : 200,
         minSize : 10,
         maxSize : 50,
         num : 300,
