--- a/skills.html
+++ b/skills.html
@@ -22,6 +22,7 @@
 	
 	<link href='http://fonts.googleapis.com/css?family=Lora:400,400italic,700,700italic&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Raleway:400,100,200,300,500,600,700,800,900' rel='stylesheet' type='text/css'>
 	
 
  
@@ -79,10 +80,13 @@
 	
 
    
-
+<!-- <div id="canvasBubbles">
+		
+</div> -->
+ 
 
     <!----------------------- skille w kółkach yay -------------------------->
-    <div class="container">
+    <div class="container"  >
 
         <hr class="krecha">
 
@@ -287,6 +291,30 @@
 	
 	<!-- Custom JavaScript -->
     <script src="js/clean-blog.min.js"></script>
+	
+	<!-- ------------bubbles------------ -->
+	
+	<script src="js/bubbles.js"></script>
+        
+	
+		<script>
+		bubblesMain(new Object({
+        type : 'radial',
+        revolve : 'center',
+        minSpeed : 100,
+        maxSpeed : 200,
+        minSize : 10,
+        maxSize : 50,
+        num : 300,
+        colors : new Array('#DE2020','#CCDE21','#729BB1', '#2D8A15', '#620D4C')
+		}));
+
+		</script>
+	
+	
+	
+	
+	
 <!-- Start of StatCounter Code for Default Guide -->
 <script type="text/javascript">
 var sc_project=10496396; 
