kontakt nowa fota

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
         <!-- kontakt -->
         <div class="segment contact" id="contact">
-            <img class="segment-image img-circle img-responsive pull-left" src="img/kontakt.png">
+            <img class="segment-image img-circle img-responsive pull-left" src="img/kontakt400.png">
             <h2 class="segment-heading">kontakt</h2>
 			<h3 class="lead">można do mnie dzwonić o każdej porze:</h3>
 			<p class="niebieski">+48 505967536</p>
