validator:komentarze próba

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
 
-  <!--   <meta charset="utf-8"> -->
 	<meta http-equiv="Content-Type" content="text/html" charset="utf-8" /> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,13 +11,13 @@
 
     <title>Marl</title>
 
-    <!--------Bootstrap CSS -->
+    <!--###Bootstrap CSS###-->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Mój CSS -->
+    <!--###Mój CSS### -->
     <link href="css/index.css" rel="stylesheet">
 	
-	<!-- --------fonty------ -->
+	<!--###fonty###-->
 	
 	<link href='http://fonts.googleapis.com/css?family=Lora:400,400italic,700,700italic&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
