--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ src="http://c.statcounter.com/10496396/0/83340be0/1/"
 alt="shopify analytics ecommerce"></a></div></noscript>
 <!-- End of StatCounter Code for Default Guide -->
 
-<!-- -------google anal------- -->
+<!--###google anal###-->
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
