--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ alt="shopify analytics ecommerce"></a></div></noscript>
   ga('send', 'pageview');
 
 </script>
-<!-- ---------google anal end----------- -->
+<!--###oogle anal end###-->
 	
 
 </body>
