--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <!--###wstep###-->
 		
 		    <div class="segment wstep" id="wstep">
-            <img class="segment-image img-circle img-responsive pull-right" src="img/marl400.jpg">
+            <img class="segment-image img-circle img-responsive pull-right" src="img/marl400.jpg" alt="fotka marl">
             <h2 class="segment-heading">trochę o mnie</h2>
 			
 				<p class="wstep-content">
@@ -164,7 +164,7 @@
         <!-- ###kontakt### -->
 		
         <div class="segment contact" id="contact">
-            <img class="segment-image img-circle img-responsive pull-left" src="img/kontakt400.png">
+            <img class="segment-image img-circle img-responsive pull-left" src="img/kontakt400.png" alt="">
             <h2 class="segment-heading">kontakt</h2>
 			<h3 class="lead">można do mnie dzwonić o każdej porze:</h3>
 			<p class="niebieski">+48 505967536</p>
