kolka - kolory/rozmieszczenie/po polsku

--- a/skills.html
+++ b/skills.html
@@ -100,10 +100,11 @@
 				<h3 class="lead">...</h4>
 				<h3 class="lead">Narzędzia:</h4>
 				<ul class="lead">
-					<li>html/css</li>
+					<li>html5/css3</li>
 					<li>bootstrap framework</li>
 					<li>wordpress CMS</li>
-					<li>javascript<br><span class="text-muted">(ciągle rozwijane)</span></li>
+					<li>javascript basics</li>
+					<li>axure rp<br><span class="text-muted">(ciągle rozwijane)</span></li>
 				</ul>
 				<h3 class="lead">Interesują mnie:<h4>
 				<ul class="lead">
@@ -137,7 +138,7 @@
 
         <!-- graphics and photography -->
         <div class="skilltheme graph" id="graph">
-            <img class="skilltheme-image img-circle img-responsive pull-right" src="img/graph.png">
+            <img class="skilltheme-image img-circle img-responsive pull-right" src="img/grafika500.png">
             <h2 class="skill-heading">grafika
                 <span class="text-muted">i fotografia</span>
             </h2>
@@ -161,7 +162,7 @@
 		
 		  <!-- text crafting -->
         <div class="skilltheme right text" id="text">
-            <img class="skilltheme-image img-circle img-responsive pull-left" src="img/text.png">
+            <img class="skilltheme-image img-circle img-responsive pull-left" src="img/slowa500.png">
             <h2 class="skill-heading">Tworzenie
                 <span class="text-muted">treści</span>
             </h2>
@@ -176,12 +177,29 @@
         </div>
 
         <hr class="krecha">
-		
+
+			  <!-- biznes -->
+        <div class="skilltheme left biznes" id="biznes">
+            <img class="skilltheme-image img-circle img-responsive pull-right" src="img/biznes500.png">
+            <h2 class="skill-heading">Biznes
+                <span class="text-muted">i technologie</span>
+            </h2>
+			<h3 class="lead">...</h3>
+				<h3 class="lead">Interesują mnie:</h3>
+			<ul class="lead">
+					<li>nowe media i technologie</li>
+					<li>branża interaktywna</li>
+					<li>środowisko startupowe</li>
+			</ul>
+            
+        </div>
+
+        <hr class="krecha">
 		
 		
 		  <!-- geeky -->
-        <div class="skilltheme geek" id="geek">
-            <img class="skilltheme-image img-circle img-responsive pull-right" src="img/geeky.png">
+        <div class="skilltheme right geek" id="geek">
+            <img class="skilltheme-image img-circle img-responsive pull-left" src="img/geeky500.png">
             <h2 class="skill-heading">geeky
                 <span class="text-muted">skills</span>
             </h2>
@@ -195,20 +213,15 @@
 					<li>podstawowe narzędzia do montażu</li>
 					<li>GitHub</li>
 			</ul>
-			<h3 class="lead">Interesują mnie:</h3>
-			<ul class="lead">
-					<li>nowe media i technologie</li>
-					<li>branża interaktywna</li>
-					<li>środowisko startupowe</li>
-			</ul>
+		
     
         </div>
 
         <hr class="krecha">
 		
 			  <!-- languages -->
-        <div class="skilltheme right lang" id="lang">
-            <img class="skilltheme-image img-circle img-responsive pull-left" src="img/lang.png">
+        <div class="skilltheme left lang" id="lang">
+            <img class="skilltheme-image img-circle img-responsive pull-right" src="img/lang.png">
             <h2 class="skill-heading">Języki</h2>
 			<h3 class="lead">...</h3>
 			<ul class="lead">
@@ -224,8 +237,8 @@
         <hr class="krecha">
 
 				  <!-- soft skills -->
-        <div class="skilltheme soft" id="soft">
-            <img class="skilltheme-image img-circle img-responsive pull-right" src="img/soft.png">
+        <div class="skilltheme right soft" id="rozwoj">
+            <img class="skilltheme-image img-circle img-responsive pull-left" src="img/rozwoj500.png">
             <h2 class="skill-heading">cechy
                 <span class="text-muted">i nastawienie</span>
             </h2>
