--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                
 				<ul class="nav navbar-nav navbar-left">
+					 <li><a href="index.html" class="blue">marl</a></li>
                      <li><a href="skills.html" class="blue">umiejętności</a></li>
 					 <li><a href="education.html">edukacja</a></li>
                     
