listy: haczyk i li w jednej lini finally!

--- a/education.html
+++ b/education.html
@@ -300,13 +300,13 @@
                     <img class="kolko img-circle img-responsive img-center" src="img/webico100.png" alt=""/>
                     <h4 class="service-heading">Web development & design</h4>
 					<ul class="kursy-list">
-						<li><img src="img/haczyk.png"/> Codecademy: HTML & CSS</li>
-						<li><img src="img/haczyk.png"/> Codecademy: Make a website: HTML & CSS</li>
-						<li><img src="img/haczyk.png"/> Codecademy: Javascript</li>
-						<li><img src="img/haczyk.png"/> W3Cx: Learn HTML5 from W3C</li>
-						<li><img src="img/haczyk.png"/> Microsoft: DEV203x Introduction to Bootstrap</li>
-						<li><img src="img/haczyk.png"/> University of Michigan: Web Design for Everybody (Specjalizacja, Advanced styling and RWD)</li>
-						<li><img src="img/haczyk.png"/> Johns Hopkins University: HTML, CSS, and Javascript for Web Developers</li>
+						<li><img src="img/haczyk.png"/> <span class="kurs">Codecademy: HTML & CSS</span></li>
+						<li><img src="img/haczyk.png"/> <span class="kurs">Codecademy: Make a website: HTML & CSS</span></li>
+						<li><img src="img/haczyk.png"/> <span class="kurs">Codecademy: Javascript</span></li>
+						<li><img src="img/haczyk.png"/> <span class="kurs">W3Cx: Learn HTML5 from W3C</span></li>
+						<li><img src="img/haczyk.png"/> <span class="kurs">Microsoft: DEV203x Introduction to Bootstrap</span></li>
+						<li><img src="img/haczyk.png"/> <span class="kurs">University of Michigan: Web Design for Everybody (Specjalizacja, Advanced styling and RWD)</span></li>
+						<li><img src="img/haczyk.png"/> <span class="kurs">Johns Hopkins University: HTML, CSS, and Javascript for Web Developers</span></li>
 						
 					</ul>	
 					
