--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:300,400,500" rel="stylesheet">
         <!--lora-->
         <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
+        <!--"logo" font-->
+        <link href="https://fonts.googleapis.com/css?family=Fascinate" rel="stylesheet">
 
     <!-- My CSS -->
     <link href="css/mycss.css" rel="stylesheet">
@@ -48,8 +50,8 @@
             <div class="flex-container" id="mini-nav">
                 <div class="logo">
                     <a href="">
-                        <i class="fa fa-square"></i>
-                        m4rl
+                        <!--<i class="fa fa-square"></i>-->
+                        .marl
                     </a>
                 </div>
                 <div class="menu">
