--- a/index.html
+++ b/index.html
@@ -609,5 +609,23 @@
     <!-- My JS -->
     <script src="js/marljs.js"></script>    
     
+ <!-- Start of StatCounter Code for Default Guide -->
+<script type="text/javascript">
+var sc_project=11346861; 
+var sc_invisible=1; 
+var sc_security="2b0c679b"; 
+var scJsHost = (("https:" == document.location.protocol) ?
+"https://secure." : "http://www.");
+document.write("<sc"+"ript type='text/javascript' src='" +
+scJsHost+
+"statcounter.com/counter/counter.js'></"+"script>");
+</script>
+<noscript><div class="statcounter"><a title="free hit
+counter" href="http://statcounter.com/" target="_blank"><img
+class="statcounter"
+src="//c.statcounter.com/11346861/0/2b0c679b/1/" alt="free
+hit counter"></a></div></noscript>
+<!-- End of StatCounter Code for Default Guide -->
+    
 </body>
 </html>
