--- a/index.html
+++ b/index.html
@@ -628,5 +628,16 @@ src="//c.statcounter.com/11346861/0/2b0c679b/1/" alt="free
 hit counter"></a></div></noscript>
 <!-- End of StatCounter Code for Default Guide -->
     
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-57228186-4', 'auto');
+  ga('send', 'pageview');
+
+</script>
+    
 </body>
 </html>
