--- a/index.html
+++ b/index.html
@@ -614,6 +614,7 @@
 <script type="text/javascript">
 var sc_project=11346861; 
 var sc_invisible=1; 
+var sc_click_stat=2; 
 var sc_security="2b0c679b"; 
 var scJsHost = (("https:" == document.location.protocol) ?
 "https://secure." : "http://www.");
@@ -621,6 +622,7 @@ document.write("<sc"+"ript type='text/javascript' src='" +
 scJsHost+
 "statcounter.com/counter/counter.js'></"+"script>");
 </script>
+    
 <noscript><div class="statcounter"><a title="free hit
 counter" href="http://statcounter.com/" target="_blank"><img
 class="statcounter"
