--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <!--montserrat-->
         <link href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Archivo+Black&amp;subset=latin-ext" rel="stylesheet">
         <!--source code pro-->
         <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:300,400,500" rel="stylesheet">
         <!--lora-->
@@ -90,6 +91,15 @@
                     </div>
                 </div>
                 <div class="bigbox boxglasses">
+                    <div class="eyes">
+                        <div class="eye eye1">        
+                            <div class="pupil"></div>
+                        </div>
+                        <div class="eye eye2">        
+                            <div class="pupil"></div>
+                        </div>
+                      
+                    </div>
                     <div class="glasses-content">
                         <h2>I'm looking for a</h2>
                     </div>
