--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <div class="box boxmeetme noshadow">
                     
                     <div class="content-centered">
-                        <button type="button" class="mainbutton"><a href="#about">meet me</a></button>
+                        <a class="mainbutton" href="#about">meet me</a>
                     </div>
             
                 </div>
