boxheart translation media query

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                             </div>
                         </div>
                     </a>
-                    <div class="box noshadow tolove">
+                    <div class="box tolove">
                         <div class="content-centered">
                             <h2>to love</h2>
                         </div>
