monty python hand?

--- a/index.html
+++ b/index.html
@@ -110,8 +110,10 @@
                 <div class="box noshadow boxheart">
                     <a href="#about">
                         <div class="box arrow striped-cover">
-                            <div class="content-centered">
+                            <!--<div class="content-centered">
                                 <i class="fa fa-arrow-down boxicon"></i>
+                            </div>-->
+                            <div class="box hand">
                             </div>
                         </div>
                     </a>
